# xpdf-lite

./: .gitignore  Makefile.in  configure.in  xpdf_2.02.orig.tar.gz.delta  xpdf_2.02.orig.tar.gz.id  xpdf_2.03.orig.tar.gz.delta  xpdf_2.03.orig.tar.gz.id  xpdf_3.00.orig.tar.gz.delta  xpdf_3.00.orig.tar.gz.id  xpdf_3.01.orig.tar.gz.delta  xpdf_3.01.orig.tar.gz.id  xpdf_3.02.orig.tar.gz.delta  xpdf_3.02.orig.tar.gz.id  xpdf_3.03.orig.tar.gz.delta  xpdf_3.03.orig.tar.gz.id
debian/: changelog  rules
debian/patches/: 01-manpage.patch  11-fix-hyphens-in-manpages.patch  series
doc/: xpdf.1  xpdfrc.5
xpdf/: Annot.cc  Annot.h  CMap.cc  CMap.h  Catalog.cc  Catalog.h  CharCodeToUnicode.cc  CharCodeToUnicode.h  ConfigParser.cc  ConfigParser.h  CoreOutputDev.cc  Decrypt.cc  Decrypt.h  Error.cc  Function.cc  Function.h  Gfx.cc  Gfx.h  GfxFont.cc  GfxFont.h  GfxState.cc  GfxState.h  GlobalParams.cc  GlobalParams.h  JBIG2Stream.cc  JBIG2Stream.h  JPXStream.cc  JPXStream.h  KeyBinding.cc  KeyBinding.h  Lexer.cc  Link.cc  Link.h  Makefile.in  Object.h  OptionalContent.cc  OptionalContent.h  Outline.cc  Outline.h  OutputDev.h  (+29 more)
